--- a/vignettes/ascend_Tutorial.Rmd
+++ b/vignettes/ascend_Tutorial.Rmd
@@ -73,7 +73,11 @@ Please use `devtools` to load the development version of `ascend`.
 code_dir <- dirname(getwd())
 devtools::load_all(code_dir)
 library(BiocParallel)
+# For single-core systems
 ncores <- parallel::detectCores() - 1
+if (ncores < 1){
+  ncores <- 1
+}
 register(MulticoreParam(workers = ncores, progressbar=TRUE), default = TRUE)
 load(url("https://github.com/IMB-Computational-Genomics-Lab/ascend/blob/master/inst/extdata/RGC_scRNASeq.RData?raw=true"))
 ```
