--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,8 @@
+version 0.3.3 (2018-03-02)
+- PlotStability now works properly for all resolutions
+- Example datasets have been moved to another repository
+- Ready for testing on other systems
+
 version 0.2.7 (2018-01-25)
 - Fixed bug associated with RunDiffExpression - subsets were selected incorrectly
 
