--- a/vignettes/ascend_Tutorial.Rmd
+++ b/vignettes/ascend_Tutorial.Rmd
@@ -79,7 +79,7 @@ if (ncores < 1){
   ncores <- 1
 }
 register(MulticoreParam(workers = ncores, progressbar=TRUE), default = TRUE)
-load(url("https://github.com/IMB-Computational-Genomics-Lab/ascend/blob/master/inst/extdata/RGC_scRNASeq.RData?raw=true"))
+load(url("https://github.com/IMB-Computational-Genomics-Lab/ascend-guide/blob/master/data/sample_data/RGC_scRNASeq.rdata?raw=true"))
 ```
 
 ```{r Loadascend, eval = FALSE}
@@ -196,7 +196,7 @@ em.set <- NewEMSet(ExpressionMatrix = expression.matrix,
 em.set
 ```
 
-Refer to the vignette [An introduction to ascend - Processing and analysis of retinal ganglion cells ](RGC_Tutorial.md) for a walkthrough on how to create an EMSet.
+Refer to the vignette [An introduction to ascend - Processing and analysis of retinal ganglion cells ](RGC_Tutorial.Rmd) for a walkthrough on how to create an EMSet.
 
 ### Manipulating an EMSet
 The `ascend` package comes with functions dedicated to the retrieval and modification of data stored in `EMSets`.
@@ -299,7 +299,7 @@ PCA, TSNE and MDS plots depict relative distances between cells based on express
 
 Example: Colour cells by cluster
 ```{r LoadCompleteData, echo = FALSE}
-em.set <- readRDS(url("https://github.com/IMB-Computational-Genomics-Lab/ascend/blob/master/inst/extdata/RGC_scRNASeq.rds?raw=true"))
+em.set <- readRDS(url("https://github.com/IMB-Computational-Genomics-Lab/ascend-guide/blob/master/data/sample_data/RGC_scRNASeq.rds?raw=true"))
 ```
 
 ```{r ColourByBatch}
